Perfectly center buttons in wells, increase diamond size for more spacing, and completely disable webkit-touch-callout to fix zoom bubble

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@
   }
 }
 
+* {
+  -webkit-touch-callout: none; /* Disables the long-press magnifying glass bubble on iOS */
+  -webkit-user-select: none;
+  user-select: none;
+}
+
 html, body, #root {
   width: 100%;
   height: 100%;
